2004-02-16  Steven Bosscher  <stevenb@suse.de>

	* (c-decl.c, calls.c, cgraph.c, cgraphunit.c, expr.c, function.c,
	integrate.c, print-tree.c, toplev.c, tree-inline.c, tree-nested.c,
	tree-optimize.s, tree.h): Replace DECL_SAVED_INSNS with
	DECL_STRUCT_FUNCTION.
	* ada/utils.c: Likewise.
	* cp/decl.c: Likewise.
	* f/com.c: Likewise.
	* fortran/trans-decl.c: Likewise.
	* java/decl.c: Likewise.

2004-02-16  Richard Henderson  <rth@redhat.com>

        * cse.c (cse_insn): Don't lose REG_NON_LOCAL_GOTO note.

	* fold-const.c (operand_equal_p): Fix VECTOR_CST comparison.

2004-02-11  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/mips/mips.h (TARGET_OLDABI): Define. Use TARGET_NEWABI and
	TARGET_LODABI consistently.
	* config/mips/mips.c (function_arg,mips_setup_incoming_varargs,
	mips_va_arg,override_options,compute_frame_size,
	mips_initial_elimination_offset,mips16_fp_args,build_mips16_call_stub
	,mips_return_in_memory,mips_strict_argument_naming): Use TARGET_NEWABI
	and TARGET_LODABI consistently.
	* config/mips/mips.md (exception_receiver): Likewise.
	* config/mips/linux64.h: Likewise.

2004-02-11  Hartmut Penner  <hpenner@de.ibm.com>

	* gcc/config/rs6000/rs6000.c (rs6000_override_options)
	Set AltiVec ABI and vrsave as default for ppc64 linux.
	(init_cumulative_args): Post error, if try to return
	value in AltiVec register without enable AltiVec.
	(function_arg_advance): Ditto for passing arguments. 

2004-02-11  Richard Sandiford  <rsandifo@redhat.com>

	* emit-rtl.c (mark_label_nuses): Check that a LABEL_REF refers to
	a label before updating its usage count.

2004-02-10  Matt Kraai  <kraai@alumni.cmu.edu>

        * doc/install.texi: Remove extra cd.

2004-02-10  Ziemowit Laski  <zlaski@apple.com>

	* c-common.c (vector_size_helper): Remove; call
	reconstruct_complex_type() instead.
	* tree.c (reconstruct_complex_type): New function
	(formerly vector_size_helper() in c-common.c).
	(make_vector): Make externally visible.