@@ -1,3 +1,7 @@
+2004-02-17  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+ 
+	* cfghooks.c (split_edge): Speed up updating of dominators.
+ 
 2004-02-16  Steven Bosscher  <stevenb@suse.de>
 
 	* (c-decl.c, calls.c, cgraph.c, cgraphunit.c, expr.c, function.c,
